--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -8,13 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <style media="screen">
+        :root{
+            --labelTextColor:rgb(31,38,40);
+            --placeholderColor:rgb(135,135,135);
+            --inputFieldbgColor:rgba(141,141,141, 0.1);
+            --buttonColor:rgb(229,229,229);
+            --inputColor:rgb(48, 88, 99);
+        }
         * { 
             padding: 0;
             margin: 0;
             box-sizing: border-box;
         }
         body {
-            background-image: url("{% static 'assets/signup-page.png' %}");
+            background-image: url("{% static 'assets/newbg.jpg' %}");
             background-size: cover;  
             background-position: center; 
             background-repeat: no-repeat;  
@@ -44,7 +51,6 @@
         }
         form * { 
             font-family: 'Poppins',sans-serif; 
-            color: #ffffff; 
             letter-spacing: 0.5px; 
             outline: none; 
             border: none; 
@@ -58,7 +64,7 @@
         label {
             display: block;
             margin-top: 20px;
-            color: #ffffff;
+            color:var(--labelTextColor);
         }
         input {
             width: 100%;
@@ -66,17 +72,17 @@
             margin-top: 5px;
             border: none;
             border-radius: 3px;
-            background-color: rgba(255,255,255,0.1);
-            color: #fff;
+            background-color: var(--inputFieldbgColor);
+            color: var(--inputColor);
         }
         ::placeholder { 
-            color: #e5e5e5; 
+            color: var(--placeholderColor);
         }
         button { 
             margin-top: 14px; 
             width: 100%; 
-            background-color: #ffffff; 
-            color: #080710; 
+            background-color:var(--buttonColor);
+            color: var(--labelTextColor);
             padding: 15px 0; 
             font-size: 18px; 
             font-weight: 600; 
@@ -99,7 +105,7 @@
         }
         a { 
             text-decoration: none; 
-            color: #ffffff; 
+            color: var(--labelTextColor); 
             font-size: 14px; 
             display: block; 
             margin-top: 10px; 
