--- a/templates/about.html
+++ b/templates/about.html
@@ -37,28 +37,32 @@
 
 {% block extra_css %}
     <style>
+      :root{
+        --contentbg: rgba(230, 230, 230, 0.9);
+      }
       body, html {
-        height: 100vh;  /* Ensures full viewport height */
-        width: 100vw;   /* Ensures full viewport width */
+        height: 100vh;  
+        width: 100vw;  
         margin: 0;
         padding: 0;
         font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/profile.jpg' %}");
-        background-size: cover;         /* Ensures the image covers the full screen */
-        background-position: center;     /* Centers the image */
-        background-repeat: no-repeat;    /* Prevents tiling */
-        background-attachment: fixed;    /* Keeps the background fixed while scrolling */
+        background-image: url("{% static 'assets/newbg.jpg' %}");
+        background-size: cover;         
+        background-position: center;     
+        background-repeat: no-repeat;  
+        background-attachment: fixed;  
         display: flex;
         flex-direction: column;
     }
         .content {
           flex: 1;
           padding: 60px 15px;
-          background: white;
+          background: var(--contentbg);
           margin: 30px auto;
           border-radius: 15px;
-          max-width: 1000px; /* Make both containers the same width */
+          max-width: 1000px; 
           box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+          text-align: justify;
       }
 
         h3 {
