--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,13 +21,16 @@
 
 {% block extra_css %}
     <style>
+      :root{
+        --contentbg: rgba(230, 230, 230, 0.9);
+      }
       body, html {
         height: 100vh;  /* Ensures full viewport height */
         width: 100vw;   /* Ensures full viewport width */
         margin: 0;
         padding: 0;
         font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/profile.jpg' %}");
+        background-image: url("{% static 'assets/newbg.jpg' %}");
         background-size: cover;         /* Ensures the image covers the full screen */
         background-position: center;     /* Centers the image */
         background-repeat: no-repeat;    /* Prevents tiling */
@@ -39,7 +42,7 @@
         flex: 1;
         padding: 60px 20px;
         color: black;
-        background: white;
+        background: var(--contentbg);
         margin: 30px auto;
         border-radius: 15px;
         max-width: 1000px;
