--- a/templates/developer.html
+++ b/templates/developer.html
@@ -40,6 +40,9 @@
 
 {% block extra_css %}
 <style>
+  :root{
+    --contentbg: rgba(230, 230, 230, 0.9);
+  }
   /* Ensure full height layout */
   body, html {
     height: 100vh;  /* Ensures full viewport height */
@@ -47,7 +50,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-image: url("{% static 'assets/profile.jpg' %}");
+    background-image: url("{% static 'assets/newbg.jpg' %}");
     background-size: cover;         /* Ensures the image covers the full screen */
     background-position: center;     /* Centers the image */
     background-repeat: no-repeat;    /* Prevents tiling */
@@ -59,7 +62,7 @@
   /* Main content container */
   .content {
     
-    background: rgba(255, 255, 255, 0.9);
+    background: var(--contentbg);
     padding: 40px;
     margin: 50px auto;
     border-radius: 15px;
