--- a/templates/explore_more.html
+++ b/templates/explore_more.html
@@ -76,6 +76,9 @@
 
 {% block extra_css %}
     <style>
+      :root{
+        --contentbg: rgba(230, 230, 230, 0.9);
+      }
         html, body {
             height: 100%;
             margin: 0;
@@ -87,7 +90,7 @@
         .content {
           flex: 1;
           padding: 60px 15px;
-          background: white;
+          background: var(--contentbg);
           margin: 30px auto;
           border-radius: 15px;
           max-width: 1000px;
