--- a/templates/heart_disease_help.html
+++ b/templates/heart_disease_help.html
@@ -109,6 +109,9 @@
 
 {% block extra_css %}
     <style>
+        :root{
+            --containerbg: rgba(230, 230, 230, 0.9);
+          }
         body, html {
             height: 100%;
             margin: 0;
@@ -129,7 +132,7 @@
         }
         .container {
             max-width: 800px;
-            background: rgb(231, 235, 220);
+            background: var(--containerbg);
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
