--- a/templates/login.html
+++ b/templates/login.html
@@ -10,13 +10,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <style media="screen">
+        :root{
+            --labelTextColor:rgb(31,38,40);
+            --placeholderColor:rgb(135,135,135);
+            --inputFieldbgColor:rgba(141,141,141, 0.1);
+            --buttonColor:rgb(229,229,229);
+            --inputColor:rgb(48, 88, 99);
+        }
         * { 
             padding: 0;
             margin: 0;
             box-sizing: border-box;
         }
         body {
-            background-image: url("{% static 'assets/signup-page.png' %}");
+            background-image: url("{% static 'assets/newbg.jpg' %}");
             background-size: cover;  
             background-position: center; 
             background-repeat: no-repeat;  
@@ -41,7 +48,7 @@
         form {
             height: 550px;
             width: 450px;
-            background-color: rgba(255,255,255,0.13);
+            background-color: rgba(255,255,255,0.1);
             position: absolute;
             transform: translate(-50%, -50%);
             top: 50%;
@@ -54,7 +61,6 @@
         }
         form * { 
             font-family: 'Poppins',sans-serif; 
-            color: #ffffff; 
             letter-spacing: 0.5px; 
             outline: none; 
             border: none; 
@@ -68,7 +74,7 @@
         label {
             display: block;
             margin-top: 20px;
-            color: #ffffff;
+            color:var(--labelTextColor);
         }
         input {
             width: 100%;
@@ -76,17 +82,17 @@
             margin-top: 5px;
             border: none;
             border-radius: 3px;
-            background-color: rgba(255,255,255,0.1);
-            color: #fff;
+            background-color: var(--inputFieldbgColor);
+            color:var(--inputColor);
         }
         ::placeholder { 
-            color: #e5e5e5; 
+            colorvar(--placeholderColor);   
         }
         button { 
             margin-top: 14px; 
             width: 100%; 
-            background-color: #ffffff; 
-            color: #080710; 
+            background-color:var(--buttonColor);
+            color:var(--labelTextColor);
             padding: 15px 0; 
             font-size: 18px; 
             font-weight: 600; 
@@ -109,7 +115,7 @@
         }
         a { 
             text-decoration: none; 
-            color: #ffffff; 
+            color:var(--labelTextColor);
             font-size: 14px; 
             display: block; 
             margin-top: 10px; 
@@ -154,8 +160,8 @@
         <input type="password" id="password" name="pass" placeholder="Enter Password">
 
         <button type="submit">Login</button>
-        <a href="{% url 'signup' %}" style="display: block; margin-top: 15px; text-align: center; color: #ffffff;">Create an Account</a>
-        <a href="{% url 'forgot_password' %}" style="display: block; margin-top: 15px; text-align: center; color: #ffffff;">Forgot Password</a>
+        <a href="{% url 'signup' %}" >Create an Account</a>
+        <a href="{% url 'forgot_password' %}" >Forgot Password</a>
 
     </form>
 </body>
