--- a/templates/profile.html
+++ b/templates/profile.html
@@ -65,11 +65,14 @@
 
 {% block extra_css %}
     <style>
+        :root{
+            --cardbg: rgba(230, 230, 230, 0.5);
+          }
         body, html {
             height: 100%;
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background-image: url("{% static 'assets/profile.jpg' %}");
+            background-image: url("{% static 'assets/newbg.jpg' %}");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -86,7 +89,7 @@
         }
 
         .profile-card {
-            background-color: #f8f9fa;
+            background-color: var(--cardbg);
             backdrop-filter: blur(10px);
             border-radius: 20px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
@@ -98,7 +101,6 @@
             height: 450px;
             width: 400px;
             text-align: center;
-            margin-top: 80px;
         }
 
         .profile-card:hover {
