--- a/templates/diabetes_patient_history.html
+++ b/templates/diabetes_patient_history.html
@@ -58,14 +58,15 @@
     /* Updated CSS */
     body, html {
         height: 100%;
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background-image: url("{% static 'assets/newbg.jpg' %}");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            display: flex;
-            flex-direction: column;
+        margin: 0;
+        font-family: 'Arial', sans-serif;
+        background-image: url("{% static 'assets/newbg.jpg' %}");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        min-height: 100vh;
+        width: 100%;
     }
     .content {
         flex: 1;
