--- a/templates/heart_patient_history.html
+++ b/templates/heart_patient_history.html
@@ -66,9 +66,11 @@
     font-family: "Arial", sans-serif;
     background-image: url("{% static 'assets/newbg.jpg' %}");
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    display: flex;
-    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
   }
   .content {
     flex: 1;
