--- a/templates/symptoms_prediction_history.html
+++ b/templates/symptoms_prediction_history.html
@@ -51,8 +51,9 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        display: flex;
-        flex-direction: column;
+        background-attachment: fixed;
+        min-height: 100vh;
+        width: 100%;
     }
     .content {
         flex: 1;
